<resources>
    <string name="app_name">ΠΑΠΕΙ ΠΜΣ Πληροφορική</string>

    <!-- Drawer -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- General -->
    <string name="unipi_main_title">Πανεπιστήμιο Πειραιώς</string>
    <string name="unipi_main_desc">ΠΜΣ Πληροφορική</string>

    <string name="lorem_ipsum">Lorem ipsum sit dolor amet.</string>
    <string name="lorem_ipsum_2">Προκήρυξη Υποτροφιών Ιδρύματος Ωνάση 2022–2023</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo, ipsum vel elementum placerat, eros tortor hendrerit diam, vel faucibus lectus leo ut sem. Curabitur sit amet gravida nisi. Nam massa ex, hendrerit in gravida et, vehicula vel lacus. Pellentesque bibendum arcu at nisi vulputate tempus. Aliquam et accumsan augue. Quisque sagittis, nisl a ultrices egestas, quam tortor sagittis orci, quis faucibus justo nibh pharetra nulla. Vestibulum fringilla at elit dignissim cursus. </string>

    <string name="url_tag">URL</string>
    <string name="model">MODEL</string>
    <string name="lesson">LESSON</string>
    <string name="menu_main">Αρχική</string>
    <string name="nav_syllabus">Μαθήματα</string>
    <string name="main_screen">Αρχική</string>
    <string name="nav_grade">Βαθμολογία</string>

    <string name="search">Αναζήτηση</string>

    <string name="snackbar_error">Παρουσιάστηκε κάποιο σφάλμα</string>

    <!-- Login Screen -->
    <string name="login_username_hint">Όνομα χρήστη</string>
    <string name="login_password_hint">Κωδικός πρόσβασης</string>
    <string name="login_btn_txt">Είσοδος Φοιτητή</string>
    <string name="keep_me_logged_in">Να παραμείνω συνδεδεμένος</string>
    <string name="continue_as_guest">Συνέχεια ώς επισκέπτης</string>
    <string name="error_login_msg">Προέκυψε κάποιο σφάλμα, δοκίμασε να συνδεθείς ξανά.</string>

    <!-- About Screen -->
    <string name="about_app_text">Η εφαρμογή αυτή αναπτύχθηκε το 2022 με την επίβλεψη του κ. Ευθύμη Αλέπη, Αναπληρωτή Καθηγητή με σκοπό την εξυπηρέτηση των μελών του ΠΜΣ Πληροφορική και την προώθηση του σε υποψήφιους μεταπτυχιακούς φοιτητές.</string>
    <string name='disclamer'>Τα εφαρμογή χρησιμοποιεί δεδομένα σε μορφή rss απο το official site της σχολής (https://www.cs.unipi.gr/index.php?option=com_k2&amp;view=itemlist&amp;layout=category&amp;task=category&amp;id=16&amp;Itemid=673&amp;lang=el) αλλα και απο το e-class (https://gunet2.cs.unipi.gr/). Τα δεδομένα αυτά ανήκουν στο Πανεπιστήμιο Πειραιώς. </string>
    <string name='disclamer_more_info'><b>Περισσότερες Πληροφορίες</b>: \n https://github.com/skaradimitriou/unipi-app/blob/master/news-info.md</string>

    <!-- Announcements Screen -->
    <string name="retry">Επανάληψη</string>
    <string name="author"><b>Author:</b> %s</string>
    <string name="default_author"><b>Author:</b> infodept@unipi.gr (Πανεπιστήμιο Πειραιώς)</string>

    <!-- Contact Screen -->
    <string name="contact_type_selection">Επιλογή Τρόπου Επικοινωνίας</string>
    <string name="send_email">Αποστολή E-mail</string>
    <string name="choose_contact">Επιλογή Τηλεφώνου</string>
    <string name="call_option">Επικοινωνία μέσω τηλεφώνου</string>

    <!-- Dashboard Screen -->
    <string name="announcements">Ανακοινώσεις Τμήματος</string>
    <string name="department">Το Τμήμα</string>
    <string name="students">Φοιτητές</string>
    <string name="professors">Καθηγητές</string>
    <string name="syllabus">Πρόγραμμα Σπουδών</string>
    <string name="contact">Επικοινωνία</string>
    <string name="about_app_title">Σχετικά με την εφαρμογή</string>

    <string name="categories">Κατηγορίες</string>
    <string name="all_categories">Όλες οι κατηγορίες</string>

    <string name="main_screen_title"><b>Πανεπιστήμιο Πειραιώς (UoP)</b> \nΠΜΣ Πληροφορική</string>

    <string name="leaving_header">Φεύγεις;</string>
    <string name="leaving_yes_btn">Ναι</string>
    <string name="leaving_cancel_btn">Άκυρο</string>

    <string name="eclass_announcements">Ανακοινώσεις E-Class</string>

    <string name="grade_screen_header">Η Βαθμολογία μου</string>
    <string name="average_grade">Μέσος Όρος</string>
    <string name="completed_lessons">Περασμένα Μαθήματα</string>
    <string name="dummy_placeholder">XXX</string>

    <!-- Department Screen -->
    <string name="dept_research">Έρευνα</string>
    <string name="dept_events">Δραστηριότητες</string>
    <string name="dept_contact">Επικοινωνία</string>
    <string name="dept_studies">Σπουδές</string>

    <!-- Eclass Announcements Screen -->
    <string name="eclass_lessons_header">Αναζήτηση Μαθήματος E-Class</string>
    <string name="eclass">Ανακοινώσεις</string>
    <string name="eclass_lesson_title">Eclass Lesson Title</string>

    <string name="announcement_copied">Η Ανακοίνωση αντιγράφτηκε στο πρόχειρο!</string>
    <string name="share">Κοινοποίηση</string>
    <string name="copy">Αντιγραφή</string>
    <string name="view_announcement">Προβολή στο Gunet2</string>

    <!-- Lessons Screen -->
    <string name="lesson_announcements">Ανακοινώσεις Μαθήματος</string>
    <string name="info_title">Επεξήγηση χρωμάτων</string>
    <string name="info_body">Τα μαθήματα που είναι σημειωμένα με μπλέ χρώμα στα αριστερά είναι μαθήματα υποχρεωτικά. Αντίστοιχα, μαθήματα τα οποία είναι σημειωμένα με κόκκινο χρώμα είναι μαθήματα επιλογής.</string>
    <string name="lesson_info_title">Info</string>

    <!-- Professors Screen -->
    <string name="search_professor">Αναζήτησε έναν καθηγητή</string>

    <string name="male">male</string>
    <string name="female">female</string>

    <string name="email_type">message/rfc822</string>
    <string name="sending_email">Send mail...</string>
    <string name="no_clients_installed">There are no email clients installed.</string>

    <string name="copy_professor_email">Αντιγραφή E-mail Καθηγητή</string>
    <string name="share_professor_email">Κοινοποίηση Στοιχείων Καθηγητή</string>
    <string name="copied">Το E-mail αντιγράφτηκε στο πρόχειρο</string>

    <!-- Students Screen -->
    <string name="student_services">Υπηρεσίες Φοιτητών</string>
    <string name="lessons_mppl_title">Μαθήματα ΠΜΣ Πληροφορική</string>
    <string name="pms_informatics">ΠΜΣ Πληροφορική</string>
    <string name="unipi">Πανεπιστήμιο Πειραιώς (UoP)</string>
    <string name="news_publisher_header">News Publisher</string>
    <string name="news_publisher_desc">E-mail: publ@unipi.gr\nΤηλ. Κέντρο: 210 4142000</string>

    <string name="app_contact">Επικοινωνία</string>

    <string name="the_app">Εφαρμογή</string>
    <string name="secretariat">Γραμματεία</string>
    <string name="exit">Έξοδος</string>
    <string name="logout">Αποσύνδεση</string>

    <string name="semester">%1$dο Εξάμηνο</string>

</resources>