<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="disclamer"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.getInTouch.GetInTouchActivity">

        <TextView
            android:id="@+id/disclamer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:padding="@dimen/dimen_16"
            android:text="@{disclamer}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/lorem_ipsum_2" />

        <TextView
            android:id="@+id/news_publisher_name"
            style="@style/text_16_blue_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_16"
            android:paddingTop="@dimen/dimen_16"
            android:text="@string/news_publisher_header"
            app:layout_constraintTop_toBottomOf="@id/disclamer_text" />

        <TextView
            android:id="@+id/news_publisher_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_16"
            android:paddingTop="@dimen/dimen_5"
            android:text="@string/news_publisher_desc"
            app:layout_constraintTop_toBottomOf="@id/news_publisher_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>